# mac-m1-pyinstaller

./: main.py  pyproject.toml
